
6 Mar, 2019    'Add cookie consent to reading option'
                  - Manduca does not use cookies, except when you set non-default reading options.
                  - This fact is written below reading options.
                  - Reading options heading1 also hidden from screen-reader users.
                  - Translations added.

6 Mar, 2019    'Css and translations fixings'

6 Mar, 2019    'aria-selected to reading options'
               - in order to announce the selected reading option to screen reader users. 

6 Mar, 2019    'link target indication enhancement'
                  - If you choose link target self, then the links should not be signed as open in new window
                  - if you choose blank, then each link should be indicated as open in new window.
                  - This is php development, so next pageload will takes effect.
                  
6 mar, 2019    'links use not-signed class are ignored'
                  Link Function now has this escape if you want something to ignore. 

7 Mar, 2019    'add aria-selected to reading options'
                  There was missing the aria selected when opening the reading option.
                  Now aria selected is alwasys there.
                  
7 Mar, 2019    'clean theme setup'
                  In order to develop a the hide-show system, enque is moved to an independent class.
                  
7 Mar, 2019    'introduce accessible show-hide system'
                  -original: https://a11y.nicolas-hoffmann.net/hide-show/
                  - adopted to Manduca
                  - Add escape button to hide (thanks for Endre Nagy)
                  
7 Mar, 2019    'sitemap refactoring'
                  - New sitemap template is easier to modify
                  - uses the new hide-show system instead of accessible tabs.
                  - accessible tabs will be depretiated, since I have found better alternative. 