@@ -38,10 +38,13 @@ How to ...
 ... add namespace in child theme in order to avoid nam confusions::
       add the namsepace as a key to Manduca_Classloader. e.g 'Web25\\childtheme' => get_stylesheet_directory() .'/inc/'
 
-... add hide-show parts. Use the following classes:
+... implement multi-level hide-show system.
+            You can use in #wrapper (that is #primary and #secondary)
+            Use the following classes:
             js-expandmore-all : this is a button to hide all and show all. 
             js-to_expand      : this is the hide/show part (div)
             js-to_expandmore  : this is the header (e.g. h2) which is the title of the collapsable part.
+            is-opened         : part is visible when page has been loaded
             Use keys: space or enter to hide/show,
             Use escape to hide actual part.
             
