@@ -65,23 +65,23 @@ initMainNavigation($('.main-navigation'));masthead=$('.megamenu-parent');menuTog
 menuToggle.attr('aria-expanded','false');menuToggle.on('click.manduca',function(){siteNavContain.toggleClass('toggled-on');menuToggle.toggleClass('toggled-on');toolbarButtonsOpen.removeClass('toggled-on');toolbarButtonsOpen.attr('aria-expanded','false');toolbarButtons.removeClass('toggled-on');toolbarButtons.css('display','none');$(this).attr('aria-expanded',siteNavContain.hasClass('toggled-on'))})})();(function(){if(!siteNavigation.length||!siteNavigation.children().length){return}
 function toggleFocusClassTouchScreen(){if('none'===$('.menu-toggle').css('display')){$(document.body).on('touchstart.manduca',function(e){if(!$(e.target).closest('.main-navigation li').length){$('.main-navigation li').removeClass('focus')}});siteNavigation.find('.menu-item-has-children > a, .page_item_has_children > a').on('touchstart.manduca',function(e){var el=$(this).parent('li');if(!el.hasClass('focus')){e.preventDefault();el.toggleClass('focus');el.siblings('.focus').removeClass('focus')}})}else{siteNavigation.find('.menu-item-has-children > a, .page_item_has_children > a').unbind('touchstart.manduca')}}
 if('ontouchstart' in window){$(window).on('resize.manduca',toggleFocusClassTouchScreen);toggleFocusClassTouchScreen()}
-siteNavigation.find('a').on('focus.manduca blur.manduca',function(){$(this).parents('.menu-item, .page_item').toggleClass('focus')})})();var contrastType=readCookie("contrastType");if(contrastType){$('body').addClass(contrastType);$('#'+contrastType).attr('aria-selected','true')}
-else{$('body').addClass("high-contrast-0");$('#high-contrast-0').attr('aria-selected','true')}
-var fontType=readCookie("fontType");if(fontType){$('body').addClass(fontType);$('#'+fontType).attr('aria-selected','true')}
-else{$('body').addClass("font-type-0");$('#font-type-0').attr('aria-selected','true')}
-var fontSize=readCookie("fontSize");if(fontSize){$('body').addClass(fontSize);$('#'+fontSize).attr('aria-selected','true')}
-else{$('body').addClass("font-size-0");$('#font-size-0').attr('aria-selected','true')}
+siteNavigation.find('a').on('focus.manduca blur.manduca',function(){$(this).parents('.menu-item, .page_item').toggleClass('focus')})})();var contrastType=readCookie("contrastType");if(contrastType){$('body').addClass(contrastType);$('#'+contrastType).attr('disabled','true')}
+else{$('body').addClass("high-contrast-0");$('#high-contrast-0').attr('disabled','true')}
+var fontType=readCookie("fontType");if(fontType){$('body').addClass(fontType);$('#'+fontType).attr('disabled','true')}
+else{$('body').addClass("font-type-0");$('#font-type-0').attr('disabled','true')}
+var fontSize=readCookie("fontSize");if(fontSize){$('body').addClass(fontSize);$('#'+fontSize).attr('disabled','true')}
+else{$('body').addClass("font-size-0");$('#font-size-0').attr('disabled','true')}
 $('.toolbar-buttons-open').click(function(){$('.toolbar-buttons').slideToggle(200);if($(".menu-toggle").hasClass("toggled-on")){$(".megamenu").removeClass("toggled-on");$(".menu-toggle").removeClass("toggled-on")}
 if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()}
 else{$(".toolbar-buttons").addClass("toggled-on");$(".toolbar-buttons-open").addClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','true')}});var linkTarget=readCookie("linkTarget");if(linkTarget=='self'){$('#target-selector option[value="self"]').attr('selected','true')}
 if(linkTarget=='blank'){$('#target-selector option[value="blank"]').attr('selected','true')}
-$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$(".toolbar-buttons").css('display','none');$('#toolbar-buttons-open').focus()}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');$('.change-font-size').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');$('.high-contrast').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');$('.change-font-type').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#target-selector').on('change',function(){var selectTarget=this.value;var CookieDate=new Date();CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='linkTarget='+selectTarget+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(event){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus();return!1});$('#skip-to-sidebar').click(function(event){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus();return!1});$('#skip-to-footer').click(function(event){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus();return!1});$('#manduca-back-to-top').click(function(event){event.preventDefault();jQuery('html, body').animate({scrollTop:0},800);jQuery('#skip-to-content').focus();return!1});$(document).on('scroll',function(event){event.preventDefault();if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}
+$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$(".toolbar-buttons").css('display','none');$('#toolbar-buttons-open').focus()}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');$('.change-font-size').removeAttr('disabled');$(this).attr('disabled','true');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');$('.high-contrast').removeAttr('disabled');$(this).attr('disabled','true');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');$('.change-font-type').removeAttr('disabled');$(this).attr('disabled','true');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#target-selector').on('change',function(){var selectTarget=this.value;var CookieDate=new Date();CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='linkTarget='+selectTarget+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(event){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus();return!1});$('#skip-to-sidebar').click(function(event){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus();return!1});$('#skip-to-footer').click(function(event){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus();return!1});$('#manduca-back-to-top').click(function(event){event.preventDefault();jQuery('html, body').animate({scrollTop:0},800);jQuery('#skip-to-content').focus();return!1});$(document).on('scroll',function(event){event.preventDefault();if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}
 return!1});$('a.extlink').click(function(){var linkTarget=readCookie("linkTarget");if(linkTarget=='self'){$(this).attr('target','_self')}
 if(linkTarget=='blank'){$(this).attr('target','_blank')}});$('#manduca_archive-month-submit').click(function(){var year=$('#manduca-archive-year-dropdown').val();var month=$('#manduca-archive-month-dropdown').val();var url=window.location.protocol+"//"+window.location.host+"/"+year+"/"+month+"/";document.location.href=url});$('#manduca-archive-year-dropdown').change(function(){var year=$('#manduca-archive-year-dropdown').val();var url=window.location.protocol+"//"+window.location.host+'/?manduca=ajax';jQuery.ajax({url:url,type:'post',data:{action:'archives',year:year,hash:manducaScreenReaderText.hash},success:function(response){$('#manduca-archive-month-dropdown option').remove();$('#manduca-archive-month-dropdown').append(response).focus()}})})})(jQuery);jQuery(document).ready(function($){var attr_control='data-controls',attr_expanded='aria-expanded',attr_labelledby='data-labelledby',attr_hidden='data-hidden',$expandmore=$('.js-expandmore'),$body=$('#wrapper'),delay=1500,hash=window.location.hash.replace("#",""),multiexpandable=!0;if($expandmore.length){$expandmore.each(function(index_to_expand){var $this=$(this),index_lisible=index_to_expand+1,options=$this.data(),$hideshow_prefix_classes=typeof options.hideshowPrefixClass!=='undefined'?options.hideshowPrefixClass+'-':'',not_all_expands=typeof options.notAllExpands!=='undefined'?!0:!1,$to_expand=$this.next(".js-to_expand"),$expandmore_text=$this.html();$this.html('<button type="button" class="'+$hideshow_prefix_classes+'expandmore__button js-expandmore-button"'+(not_all_expands?'data-not-all-expands="true"':'')+'><span class="'+$hideshow_prefix_classes+'expandmore__symbol" aria-hidden="true"></span>'+$expandmore_text+'</button>');var $button=$this.children('.js-expandmore-button');$to_expand.addClass($hideshow_prefix_classes+'expandmore__to_expand').stop().delay(delay).queue(function(){var $this=$(this);if($this.hasClass('js-first_load')){$this.removeClass('js-first_load')}});$button.attr('id','label_expand_'+index_lisible);$button.attr(attr_control,'expand_'+index_lisible);$button.attr(attr_expanded,'false');$to_expand.attr('id','expand_'+index_lisible);$to_expand.attr(attr_hidden,'true');$to_expand.attr(attr_labelledby,'label_expand_'+index_lisible);if(not_all_expands){$to_expand.attr('data-not-all-expands','true')}
 if($to_expand.hasClass('is-opened')||(hash!==""&&$to_expand.find($("#"+hash)).length)){$button.addClass('is-opened').attr(attr_expanded,'true');$to_expand.removeClass('is-opened').removeAttr(attr_hidden)}})}
 $body.on('click','.js-expandmore-button',function(event){var $this=$(this),$destination=$('#'+$this.attr(attr_control));if($this.attr(attr_expanded)==='false'){if(multiexpandable===!1){$('.js-expandmore-button').removeClass('is-opened').attr(attr_expanded,'false');$('.js-to_expand').attr(attr_hidden,'true')}
 $this.addClass('is-opened').attr(attr_expanded,'true');$destination.removeAttr(attr_hidden)}else{$this.removeClass('is-opened').attr(attr_expanded,'false');$destination.attr(attr_hidden,'true')}
-event.preventDefault()});$body.on('keydown','.js-expandmore-button',function(event){var $this=$(this),$destination=$('#'+$this.attr(attr_control));if(event.keyCode===27&&$this.attr(attr_expanded)==='true'){$this.removeClass('is-opened').attr(attr_expanded,'false');$destination.attr(attr_hidden,'true')}});$body.on('click keydown','.js-expandmore',function(event){var $this=$(this),$target=$(event.target),$button_in=$this.find('.js-expandmore-button');if(!$target.is($button_in)&&!$target.closest($button_in).length){if(event.type==='click'){$button_in.trigger('click');return!1}
+event.preventDefault()});$body.on('keydown','.js-expandmore-button',function(event){var $this=$(this),$destination=$('#'+$this.attr(attr_control));if(event.keyCode===27&&$this.attr(attr_expanded)==='true'){$this.removeClass('is-opened').attr(attr_expanded,'false');$destination.attr(attr_hidden,'true');$this.focus()}});$body.on('click keydown','.js-expandmore',function(event){var $this=$(this),$target=$(event.target),$button_in=$this.find('.js-expandmore-button');if(!$target.is($button_in)&&!$target.closest($button_in).length){if(event.type==='click'){$button_in.trigger('click');return!1}
 if(event.type==='keydown'&&(event.keyCode===13||event.keyCode===32)){$button_in.trigger('click');return!1}}});$body.on('click keydown','.js-expandmore-all',function(event){var $this=$(this),options=$this.data(),is_expanded=$this.attr('data-expand'),txt_expand_all=typeof options.textExpandAll!=='undefined'?options.textExpandAll:manducaScreenReaderText.expand_all,txt_collapse_all=typeof options.textCloseAll!=='undefined'?options.textCloseAll:manducaScreenReaderText.collapse_all,$all_buttons=$('.js-expandmore-button:not([data-not-all-expands])'),$all_destinations=$('.js-to_expand:not([data-not-all-expands])');if(event.type==='click'||(event.type==='keydown'&&(event.keyCode===13||event.keyCode===32))){if(is_expanded==='true'){$all_buttons.addClass('is-opened').attr(attr_expanded,'true');$all_destinations.removeAttr(attr_hidden);$this.attr('data-expand','false').html(txt_collapse_all)}else{$all_buttons.removeClass('is-opened').attr(attr_expanded,'false');$all_destinations.attr(attr_hidden,'true');$this.attr('data-expand','true').html(txt_expand_all)}}})});function createCookie(name,value,days){if(days){var date=new Date();date.setTime(date.getTime()+(days*24*60*60*1000));var expires="; expires="+date.toGMTString()}
 else var expires="";document.cookie=name+"="+value+expires+"; path=/"}
 function readCookie(name){var nameEQ=name+"=";var ca=document.cookie.split(';');for(var i=0;i<ca.length;i++){var c=ca[i];while(c.charAt(0)==' ')c=c.substring(1,c.length);if(c.indexOf(nameEQ)==0)return c.substring(nameEQ.length,c.length)}
